infrastructure/legacy/stellar-horizon-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stellar-horizon-lb
  labels:
        app: stellar-horizon-debug
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: stellar-horizon-debug
  type: LoadBalancer
