infrastructure/legacy/stellar-horizon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stellar-horizon
spec:
  selector:
    app: stellar-horizon-debug
  ports:
    - protocol: TCP
      port: 8000
